--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,36 @@
-<p>login works!</p>
+<h1 class="text-center">Log In</h1>
+
+<div class="login-form p-4 border rounded">
+  <h2 class="text-center display-6"><i class="fa-solid fa-user"></i></h2>
+  <form method="post">
+    <div class="form-group p-3">
+      <label for="username">Username</label>
+      <input
+        type="text"
+        name="username"
+        class="form-control"
+        id="username"
+        aria-describedby="usernameHelp"
+        placeholder="Username"
+      />
+    </div>
+    <div class="form-group p-3">
+      <label for="password">Password</label>
+      <input
+        type="password"
+        name="password"
+        class="form-control"
+        id="password"
+        placeholder="Password"
+      />
+    </div>
+    <div class="form-group form-check">
+      <a class="nav-link text-secondary" href="/register"
+        >Please click here if you don't have an account.</a
+      >
+    </div>
+    <button type="submit" class="btn btn-primary d-block m-auto mt-3">
+      Submit
+    </button>
+  </form>
+</div>
