--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,208 @@
-<p>register works!</p>
+<div class="fluid-container p-5">
+  <form
+    class="row g-3 border rounded p-3"
+    [formGroup]="registerForm"
+    (ngSubmit)="submit()"
+  >
+    <h2 class="text-center mb-4">Reactive Form</h2>
+    <div class="col-md-6">
+      <label for="username" class="form-label">Usuario:</label>
+      <input
+        type="text"
+        class="form-control"
+        [ngClass]="{ 'is-invalid': registerForm.controls.username.errors }"
+        [ngClass]="{ 'is-valid': !registerForm.controls.username.errors }"
+        id="username"
+        formControlName="username"
+      />
+      <div
+        *ngIf="this.registerForm.get('username')?.errors?.['required'] && this.registerForm.get('username')?.touched"
+        class="form-text text-danger"
+      >
+        El nombre de usuario requerido.
+      </div>
+      <div
+        *ngIf="this.registerForm.get('username')?.errors?.['minlength'] && this.registerForm.get('username')?.touched"
+        class="form-text text-danger"
+      >
+        La longitud tiene que ser de 8 o más.
+      </div>
+      <div
+        *ngIf="this.registerForm.get('username')?.errors?.['maxlength'] && this.registerForm.get('username')?.touched"
+        class="form-text text-danger"
+      >
+        La longitud no tiene que ser mayor de 20.
+      </div>
+    </div>
+    <div class="col-md-6">
+      <label for="email" class="form-label">Email:</label>
+      <input
+        type="email"
+        [ngClass]="{ 'is-invalid': registerForm.controls.email.errors }"
+        [ngClass]="{ 'is-valid': !registerForm.controls.email.errors }"
+        class="form-control"
+        id="email"
+        formControlName="email"
+      />
+      <div
+        *ngIf="this.registerForm.get('email')?.errors?.['required'] && this.registerForm.get('email')?.touched"
+        class="form-text text-danger"
+      >
+        El email es requerido.
+      </div>
+      <div
+        *ngIf="this.registerForm.get('email')?.errors?.['pattern'] && this.registerForm.get('email')?.touched"
+        class="form-text text-danger"
+      >
+        El email no tiene el formato correcto
+      </div>
+    </div>
+    <div class="col-md-6">
+      <label for="password" class="form-label">Contraseña:</label>
+      <input
+        type="password"
+        [ngClass]="{ 'is-invalid': registerForm.controls.password.errors }"
+        [ngClass]="{ 'is-valid': !registerForm.controls.password.errors }"
+        class="form-control"
+        id="password"
+        formControlName="password"
+      />
+      <div
+        *ngIf="this.registerForm.get('password')?.errors?.['required'] && this.registerForm.get('password')?.touched"
+        class="form-text text-danger"
+      >
+        La contraseña es requerida.
+      </div>
+      <div
+        *ngIf="this.registerForm.get('password')?.errors?.['pattern'] && this.registerForm.get('password')?.touched"
+        class="form-text text-danger"
+      >
+        La contraseña tiene que contener minusculas, mayusculas, numeros y
+        simbolos.
+      </div>
+    </div>
+    <div class="col-md-6">
+      <label for="retry-password" class="form-label">Repite contraseña:</label>
+      <input
+        type="password"
+        [ngClass]="{ 'is-invalid': registerForm.controls.retryPassword.errors }"
+        [ngClass]="{ 'is-valid': !registerForm.controls.retryPassword.errors }"
+        class="form-control"
+        id="retryPassword"
+        formControlName="retryPassword"
+      />
+      <div
+        *ngIf="this.registerForm.get('retryPassword')?.errors?.['required'] && this.registerForm.get('retryPassword')?.touched"
+        class="form-text text-danger"
+      >
+        La contraseña es requerida.
+      </div>
+      <div
+        *ngIf="this.registerForm.get('retryPassword')?.errors?.['pattern'] && this.registerForm.get('retryPassword')?.touched"
+        class="form-text text-danger"
+      >
+        La contraseña tiene que contener minusculas, mayusculas, numeros y
+        simbolos.
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <label for="maritalStatus" class="form-label">Estado civil:</label>
+      <select
+        id="maritalStatus"
+        class="form-select"
+        formControlName="maritalStatus"
+        (change)="changeStatus($event)"
+      >
+        <option *ngFor="let status of maritalStatusOptions">
+          {{ status }}
+        </option>
+      </select>
+    </div>
+    <div class="offset-md-1 col-md-3">
+      <p>Genero:</p>
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="inlineRadioOptions"
+          id="man"
+          value="man"
+          (change)="changeGender($event)"
+        />
+        <label class="form-check-label" for="inlineRadio1">Hombre</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="inlineRadioOptions"
+          id="woman"
+          value="woman"
+          (change)="changeGender($event)"
+        />
+        <label class="form-check-label" for="inlineRadio2">Mujer</label>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <p>Intereses:</p>
+      <div
+        class="form-check-inline"
+        formGroupName="interestsGroup"
+        *ngFor="let interest of interestsList"
+      >
+        <label class="form-check-label">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value=""
+            id="flexCheckDefault"
+            formControlName="{{ interest }}"
+          />
+          {{ interest }}
+        </label>
+      </div>
+      <!-- <div
+        class="invalid-feedback"
+        *ngIf="
+          this.registerForm.controls['interestsGroup'].errors &&
+          this.registerForm.controls['interestsGroup'].errors
+        "
+      >
+        At least one checkbox is required to check
+      </div> -->
+    </div>
+    <div class="col-12">
+      <div class="form-check pt-4">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          formControlName="acceptConditions"
+          id="acceptConditions"
+        />
+        <label class="form-check-label" for="acceptConditions">
+          Aceptar terminos y condiciones.
+        </label>
+      </div>
+      <div
+        class="form-text text-danger"
+        *ngIf="
+          this.registerForm.controls['acceptConditions'].errors &&
+          this.registerForm.controls['acceptConditions'].errors?.['required']
+        "
+      >
+        Es obligatorio marcar esta casilla
+      </div>
+    </div>
+    <div class="col-12">
+      <button
+        type="submit"
+        class="btn btn-success"
+        type="submit"
+        [disabled]="registerForm.invalid"
+      >
+        Registrar
+      </button>
+    </div>
+  </form>
+</div>
