--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,138 @@
-<app-navbar></app-navbar>
-<div class="container-fluid p-5">
-<router-outlet></router-outlet>
-</div>
+<main>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand me-lg-5 me-0" href="/">
+        <!-- <img
+          src="/assets/images/pod-talk-logo.png"
+          class="logo-image img-fluid"
+          alt="logo"
+        /> -->
+        GoEvents
+      </a>
+
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-lg-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+
+          <li class="nav-item" *ngIf="showEventList">
+            <a class="nav-link" href="/events">Events</a>
+          </li>
+
+          <li class="nav-item" *ngIf="showProfile">
+            <a class="nav-link" href="/profile">Profile</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="/register">Register</a>
+          </li>
+        </ul>
+        <div class="ms-4" *ngIf="isLoggedIn; else logout">
+          <a class="btn custom-btn custom-border-btn" (click)="getLogout()"
+            ><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</a
+          >
+        </div>
+        <ng-template #logout>
+          <div class="ms-4">
+            <a href="/login" class="btn custom-btn custom-border-btn"
+              ><i class="fa-solid fa-user me-2"></i>Login</a
+            >
+          </div>
+        </ng-template>
+      </div>
+    </div>
+  </nav>
+  <!-- section -->
+  <router-outlet></router-outlet>
+  <!-- section -->
+</main>
+
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-md-6 col-12 mb-4 mb-md-0 mb-lg-0">
+        <h6 class="site-footer-title mb-3">Contact</h6>
+
+        <p class="mb-2">
+          <strong class="d-inline me-2">Phone:</strong> 010-020-0340
+        </p>
+
+        <p>
+          <strong class="d-inline me-2">Email:</strong>
+          <a>goevents@email.com</a>
+        </p>
+      </div>
+
+      <div class="col-lg-4 col-md-6 col-12 mb-4 mb-md-0 mb-lg-0">
+        <h6 class="site-footer-title mb-3">Links</h6>
+
+        <ul class="site-footer-links">
+          <li class="site-footer-link-item">
+            <a href="/" class="site-footer-link">Home</a>
+          </li>
+
+          <li class="site-footer-link-item">
+            <a href="/register" class="site-footer-link">Register</a>
+          </li>
+
+          <li class="site-footer-link-item">
+            <a href="/login" class="site-footer-link">Log In</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-lg-4 col-md-6 col-12">
+        <h6 class="site-footer-title mb-3">Social</h6>
+
+        <ul class="social-icon">
+          <li class="social-icon-item">
+            <a class="social-icon-link"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+          </li>
+
+          <li class="social-icon-item">
+            <a class="social-icon-link"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+
+          <li class="social-icon-item">
+            <a class="social-icon-link"
+              ><i class="fa-brands fa-whatsapp"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="container pt-5">
+    <div class="row align-items-center">
+      <div class="col-lg-4 col-md-3 col-12">
+        <a class="navbar-brand" href="index.html">
+          <img
+            src="/assets/images/pod-talk-logo.png"
+            class="logo-image img-fluid"
+            alt="templatemo pod talk"
+          />
+        </a>
+      </div>
+
+      <div class="col-lg-4 col-12">
+        <p class="copyright-text mb-0">Copyright © 2023 GoEvents <br /></p>
+      </div>
+    </div>
+  </div>
+</footer>
