--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,45 @@
-<p>home works!</p>
+<header
+  class="site-header d-flex flex-column justify-content-center align-items-center"
+>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-12 text-center">
+        <h2 class="mb-0">Home</h2>
+      </div>
+    </div>
+  </div>
+</header>
+
+<section class="about-section section-padding" id="section_2">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-12 mx-auto">
+        <div class="pb-5 mb-5">
+          <div class="section-title-wrap mb-4">
+            <h4 class="section-title">About us</h4>
+          </div>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
+            vel reiciendis sed. Tenetur quae quisquam pariatur labore! Cum
+            impedit repellendus ex! Impedit quae autem repudiandae porro
+            quisquam fuga numquam tempora.
+          </p>
+
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus,
+            voluptatum. Non quia labore quod repellendus aliquid sequi culpa
+            corrupti perspiciatis quo, a assumenda vitae est, harum ipsam amet
+            dolor aliquam?
+          </p>
+
+          <img
+            src="/assets/images/medium-shot-young-people-recording-podcast.jpg"
+            class="about-image mt-5 img-fluid"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
