--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,40 +1,168 @@
-<h1>Searching Event</h1>
-Filter by size:
-<input type="text" [(ngModel)]="sizeFilter" (ngModelChange)="filter()" /> Filter
-by price:
-<input
-  type="range"
-  min="0"
-  max="30"
-  [(ngModel)]="priceFilter"
-  (ngModelChange)="filter()"
-/>
-{{ priceFilter }}
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Type</th>
-      <th>Date</th>
-      <th>Location</th>
-      <th>Price</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr
-      *ngFor="
-        let c of eventosFiltrado
-          | paginate : { itemsPerPage: ipp, currentPage: cp }
-      "
-    >
-      <td>{{ c.name }}</td>
-      <td>{{ c.type }}</td>
-      <td>{{ c.date }}</td>
-      <td>{{ c.location }}</td>
-      <td>{{ c.price }}</td>
-      <td><a href="/modify" class ="btn btn-warning">Modify</a></td>
-      <td><a href="/modify" class ="btn btn-danger" (click)="deleteEvent()">Delete</a></td>
-    </tr>
-  </tbody>
-</table>
-<pagination-controls (pageChange)="cp = $event"></pagination-controls>
+<header
+  class="site-header d-flex flex-column justify-content-center align-items-center"
+>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-12 text-center">
+        <h2 class="mb-0">Listing Page</h2>
+      </div>
+    </div>
+  </div>
+</header>
+
+<section class="latest-podcast-section section-padding" id="section_2">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-12 col-12">
+        <div class="section-title-wrap mb-5">
+          <h4 class="section-title">Event search</h4>
+        </div>
+      </div>
+      <div class="col-lg-8 col-12">
+        Filter by size:
+        <input
+          class="form-control"
+          placeholder="Search event"
+          type="text"
+          [(ngModel)]="sizeFilter"
+          (ngModelChange)="filter()"
+        />
+      </div>
+      <div class="col-lg-4 col-12">
+        Filter by price:
+        <input
+          class="form-control"
+          type="range"
+          min="0"
+          max="30"
+          [(ngModel)]="priceFilter"
+          (ngModelChange)="filter()"
+        />
+        {{ priceFilter }}
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-lg-12 col-12">
+        <div class="section-title-wrap mb-5">
+          <h4 class="section-title">Lastest events</h4>
+        </div>
+      </div>
+
+      <div
+        class="col-lg-6 col-12 mb-4 mb-lg-0"
+        *ngFor="
+          let event of eventosFiltrado
+            | paginate : { itemsPerPage: ipp, currentPage: cp }
+        "
+      >
+        <div class="custom-block d-flex m-2">
+          <div class="">
+            <div class="custom-block-icon-wrap">
+              <div class="section-overlay"></div>
+              <a href="detail-page.html" class="custom-block-image-wrap">
+                <img
+                  src="/assets/images/podcast/11683425_4790593.jpg"
+                  class="custom-block-image img-fluid"
+                  alt=""
+                />
+              </a>
+            </div>
+
+            <div class="mt-2">
+              <a class="btn custom-btn"
+                ><i class="fa-solid fa-cart-shopping"></i> Buy
+              </a>
+            </div>
+          </div>
+
+          <div class="custom-block-info">
+            <div class="custom-block-top d-flex mb-1">
+              <small class="me-4">
+                <i class="bi-clock-fill custom-icon"></i>
+                {{ event.date }}
+              </small>
+
+              <small
+                >Code <span class="badge">{{ event.id + 1 }}</span></small
+              >
+            </div>
+
+            <div class="profile-block">
+              <h5 class="mb-2">
+                <a class="text-capitalize"> {{ event.name }} </a>
+              </h5>
+              <p>
+                <strong class="text-capitalize">{{ event.type }}</strong>
+              </p>
+              <p class="text-capitalize mb-0">
+                <i class="fa-solid fa-location-dot me-1"></i
+                >{{ event.location }}
+              </p>
+            </div>
+
+            <div
+              class="custom-block-bottom d-flex justify-content-between mt-3"
+            >
+              <a>
+                <span>Price: {{ event.price }} &euro;</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="d-flex flex-column ms-auto">
+            <a class="btn btn-dark" (click)="modifyEvent(event)"
+              ><i class="fa-solid fa-screwdriver-wrench"></i> Modify
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="col-lg-4 col-12 mx-auto">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination pagination-lg justify-content-center mt-5">
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+
+            <li class="page-item active">
+              <a class="page-link" href="#">1</a>
+            </li>
+
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div> -->
+
+      <div class="row">
+        <div class="col-lg-5 col-12 mx-auto">
+          <div class="mt-5">
+            <pagination-controls
+              (pageChange)="cp = $event"
+            ></pagination-controls>
+          </div>
+        </div>
+      </div>
+
+      <app-modify
+        *ngIf="modified == true"
+        [id]="id"
+        [name]="name"
+        [type]="type"
+        [date]="date"
+        [location]="location"
+        [price]="price"
+        (messageEvent)="getEvent($event)"
+      ></app-modify>
+    </div>
+  </div>
+</section>
