--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,36 +1,82 @@
-<h1 class="text-center">Log In</h1>
+<header
+  class="site-header d-flex flex-column justify-content-center align-items-center"
+>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-12 text-center">
+        <h2 class="mb-0">Log In</h2>
+      </div>
+    </div>
+  </div>
+</header>
 
-<div class="login-form p-4 border rounded">
-  <h2 class="text-center display-6"><i class="fa-solid fa-user"></i></h2>
-  <form method="post">
-    <div class="form-group p-3">
-      <label for="username">Username</label>
-      <input
-        type="text"
-        name="username"
-        class="form-control"
-        id="username"
-        aria-describedby="usernameHelp"
-        placeholder="Username"
-      />
-    </div>
-    <div class="form-group p-3">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        name="password"
-        class="form-control"
-        id="password"
-        placeholder="Password"
-      />
-    </div>
-    <div class="form-group form-check">
-      <a class="nav-link text-secondary" href="/register"
-        >Please click here if you don't have an account.</a
+<section class="about-section section-padding" id="section_2">
+  <div class="container">
+    <div class="login-form p-4 border rounded">
+      <h2 class="text-center display-6"><i class="fa-solid fa-user"></i></h2>
+      <form
+        *ngIf="!isLoggedIn"
+        name="form"
+        (ngSubmit)="f.form.valid && onSubmit()"
+        #f="ngForm"
+        novalidate
       >
+        <div class="form-group p-3">
+          <label for="username">Username</label>
+          <input
+            type="text"
+            class="form-control"
+            name="username"
+            [(ngModel)]="form.username"
+            required
+            #username="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && username.errors }"
+          />
+          <div *ngIf="username.errors && f.submitted" class="invalid-feedback">
+            Username is required!
+          </div>
+        </div>
+        <div class="form-group p-3">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            name="password"
+            [(ngModel)]="form.password"
+            required
+            minlength="6"
+            #password="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && password.errors }"
+          />
+          <div *ngIf="password.errors && f.submitted" class="invalid-feedback">
+            <div *ngIf="password.errors['required']">Password is required</div>
+            <div *ngIf="password.errors['minlength']">
+              Password must be at least 6 characters
+            </div>
+          </div>
+        </div>
+        <div class="form-group form-check">
+          <a class="nav-link text-secondary" href="/register"
+            >Please click here if you don't have an account.</a
+          >
+        </div>
+        <div class="form-group">
+          <button class="btn btn-primary d-block m-auto mt-4">Login</button>
+        </div>
+        <div class="form-group">
+          <div
+            *ngIf="f.submitted && isLoginFailed"
+            class="alert alert-danger"
+            role="alert"
+          >
+            Login failed: {{ errorMessage }}
+          </div>
+        </div>
+      </form>
+
+      <div class="alert alert-success" *ngIf="isLoggedIn">
+        Logged in as {{ role }}.
+      </div>
     </div>
-    <button type="submit" class="btn btn-primary d-block m-auto mt-3">
-      Submit
-    </button>
-  </form>
-</div>
+  </div>
+</section>
