--- a/src/app/components/modify/modify.component.html
+++ b/src/app/components/modify/modify.component.html
@@ -1,8 +1,7 @@
-<h1 class="text-center">Modify Event</h1>
 
 <div class="login-form p-4 border rounded">
   <h2 class="text-center display-6"><i class="fa-solid fa-user"></i></h2>
-  <form method="post">
+  <form #formModify="ngForm">
     <div class="form-group p-3">
       <label for="username">Name</label>
       <input
@@ -12,6 +11,7 @@
         id="Name"
         aria-describedby="usernameHelp"
         placeholder="Name"
+        [(ngModel)]="name"
       />
     </div>
     <div class="form-group p-3">
@@ -22,6 +22,7 @@
         class="form-control"
         id="type"
         placeholder="type"
+        [(ngModel)]="type"
       />
     </div>
     <div class="form-group p-3">
@@ -32,6 +33,7 @@
           class="form-control"
           id="date"
           placeholder="date"
+          [(ngModel)]="date"
         />
       </div>
       <div class="form-group p-3">
@@ -42,6 +44,7 @@
           class="form-control"
           id="location"
           placeholder="location"
+          [(ngModel)]="location"
         />
       </div>
       <div class="form-group p-3">
@@ -52,11 +55,14 @@
           class="form-control"
           id="price"
           placeholder="price"
+          [(ngModel)]="price"
         />
       </div>
-    <button type="submit" class="btn btn-primary d-block m-auto mt-3">
+    <button (click)="sendMessage()" class="btn btn-primary d-block m-auto mt-3">
       Modify
     </button>
   </form>
 </div>
+
+
 
