--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,174 +1,193 @@
-<div class="fluid-container p-5">
-  <form
-    class="row g-3 border rounded p-3"
-    [formGroup]="registerForm"
-    (ngSubmit)="submit()"
-  >
-    <div class="col-md-6">
-      <label for="username" class="form-label">Usuario:</label>
-      <input
-        type="text"
-        class="form-control"
-        id="username"
-        formControlName="username"
-      />
-      <div
-        *ngIf="this.registerForm.get('username')?.errors?.['required'] && this.registerForm.get('username')?.touched"
-        class="form-text text-danger">
-        El nombre de usuario es obligatorio.
-      </div>
-      <div
-        *ngIf="this.registerForm.get('username')?.errors?.['minlength'] && this.registerForm.get('username')?.touched"
-        class="form-text text-danger">
-        Minimo 6 caracteres.
-      </div>
-      <div
-        *ngIf="this.registerForm.get('username')?.errors?.['pattern'] && this.registerForm.get('username')?.touched"
-      class="form-text text-danger">
-      Solo letras.
+<header
+  class="site-header d-flex flex-column justify-content-center align-items-center"
+>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-12 text-center">
+        <h2 class="mb-0">Register</h2>
       </div>
     </div>
+  </div>
+</header>
 
-    <div class="col-md-6">
-      <label for="email" class="form-label">Email:</label>
-      <input
-        type="email"
-        class="form-control"
-        id="email"
-        formControlName="email"
-      />
-      <div
-        *ngIf="this.registerForm.get('email')?.errors?.['required'] && this.registerForm.get('email')?.touched"
-        class="form-text text-danger"
-      >
-        El email es obligatorio.
-      </div>
-      <div
-        *ngIf="this.registerForm.get('email')?.errors?.['pattern'] && this.registerForm.get('email')?.touched"
-        class="form-text text-danger"
-      >
-        El email no tiene el formato correcto
-      </div>
-    </div>
-
-    <div class="col-md-6">
-      <label for="password" class="form-label">Contraseña:</label>
-      <input
-        type="password"
-        class="form-control"
-        id="password"
-        formControlName="password"
-      />
-      <div
-        *ngIf="this.registerForm.get('password')?.errors?.['required'] && this.registerForm.get('password')?.touched"
-        class="form-text text-danger"
-      >
-        La contraseña es obligatoria.
-      </div>
-      <div
-      *ngIf="this.registerForm.get('password')?.errors?.['minlength'] && this.registerForm.get('password')?.touched"
-      class="form-text text-danger"
+<section class="about-section section-padding" id="section_2">
+  <div class="container">
+    <form
+      class="row g-3 border rounded p-3"
+      [formGroup]="registerForm"
+      (ngSubmit)="submit()"
     >
-      Minimo 8 caracteres.
-    </div>
-      <div
-        *ngIf="this.registerForm.get('password')?.errors?.['pattern'] && this.registerForm.get('password')?.touched"
-        class="form-text text-danger"
-      >
-        La contraseña tiene que contener solo letras o numeros
+      <div class="col-md-12">
+        <h2 class="text-center display-6">
+          <i class="fa-solid fa-user-plus"></i>
+        </h2>
       </div>
-    </div>
-
-    <div class="col-md-6">
-      <label for="retry-password" class="form-label">Repite contraseña:</label>
-      <input
-        type="password"
-        class="form-control"
-        id="retryPassword"
-        formControlName="retryPassword"
-        appCheckPass 
-        [parametro]="this.registerForm.value.password"
-      />
-      <div
-        *ngIf="this.registerForm.get('retryPassword')?.errors?.['required'] && this.registerForm.get('retryPassword')?.touched"
-        class="form-text text-danger"
-      >
-        La contraseña es obligatoria.
-      </div>
-      <div
-        *ngIf="this.registerForm.get('retryPassword')?.errors?.['checkPass'] && this.registerForm.get('retryPassword')?.touched"
-        class="form-text text-danger"
-      >
-      Contraseñas deben coincidir
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <label for="maritalStatus" class="form-label">Estado civil:</label>
-      <select
-        id="maritalStatus"
-        class="form-select"
-        formControlName="maritalStatus"
-        (change)="changeStatus($event)"
-        appCheckMaritalStatus
-      >
-        <option *ngFor="let status of maritalStatusOptions">
-          {{ status }}
-        </option>
-      </select>
-    </div>
-    <div
-    *ngIf="this.registerForm.get('maritalStatus')?.errors?.['checkMaritalStatus'] && this.registerForm.get('maritalStatus')?.touched"
-    class="form-text text-danger"
-    >
-    Debe seleccionar un valor válido
-    </div>
-    
-
-    <div class="offset-md-1 col-md-3">
-      <p>Genero:</p>
-      <div class="form-check form-check-inline">
+      <div class="col-md-6">
+        <label for="username" class="form-label">Usuario:</label>
         <input
-          class="form-check-input"
-          type="radio"
-          name="inlineRadioOptions"
-          id="man"
-          value="man"
+          type="text"
+          class="form-control"
+          id="username"
+          formControlName="username"
         />
-        <!--(change)="changeGender($event)"-->
-        <label class="form-check-label" for="inlineRadio1">Hombre</label>
+        <div
+          *ngIf="this.registerForm.get('username')?.errors?.['required'] && this.registerForm.get('username')?.touched"
+          class="form-text text-danger"
+        >
+          El nombre de usuario es obligatorio.
+        </div>
+        <div
+          *ngIf="this.registerForm.get('username')?.errors?.['minlength'] && this.registerForm.get('username')?.touched"
+          class="form-text text-danger"
+        >
+          Minimo 6 caracteres.
+        </div>
+        <div
+          *ngIf="this.registerForm.get('username')?.errors?.['pattern'] && this.registerForm.get('username')?.touched"
+          class="form-text text-danger"
+        >
+          Solo letras.
+        </div>
       </div>
-      <div class="form-check form-check-inline">
+
+      <div class="col-md-6">
+        <label for="email" class="form-label">Email:</label>
         <input
-          class="form-check-input"
-          type="radio"
-          name="inlineRadioOptions"
-          id="woman"
-          value="woman"
+          type="email"
+          class="form-control"
+          id="email"
+          formControlName="email"
         />
-        <!--(change)="changeGender($event)"-->
-        <label class="form-check-label" for="inlineRadio2">Mujer</label>
+        <div
+          *ngIf="this.registerForm.get('email')?.errors?.['required'] && this.registerForm.get('email')?.touched"
+          class="form-text text-danger"
+        >
+          El email es obligatorio.
+        </div>
+        <div
+          *ngIf="this.registerForm.get('email')?.errors?.['pattern'] && this.registerForm.get('email')?.touched"
+          class="form-text text-danger"
+        >
+          El email no tiene el formato correcto
+        </div>
       </div>
-    </div>
-    
-    <div class="col-md-4">
-      <p>Intereses:</p>
+
+      <div class="col-md-6">
+        <label for="password" class="form-label">Contraseña:</label>
+        <input
+          type="password"
+          class="form-control"
+          id="password"
+          formControlName="password"
+        />
+        <div
+          *ngIf="this.registerForm.get('password')?.errors?.['required'] && this.registerForm.get('password')?.touched"
+          class="form-text text-danger"
+        >
+          La contraseña es obligatoria.
+        </div>
+        <div
+          *ngIf="this.registerForm.get('password')?.errors?.['minlength'] && this.registerForm.get('password')?.touched"
+          class="form-text text-danger"
+        >
+          Minimo 8 caracteres.
+        </div>
+        <div
+          *ngIf="this.registerForm.get('password')?.errors?.['pattern'] && this.registerForm.get('password')?.touched"
+          class="form-text text-danger"
+        >
+          La contraseña tiene que contener solo letras o numeros
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <label for="retry-password" class="form-label"
+          >Repite contraseña:</label
+        >
+        <input
+          type="password"
+          class="form-control"
+          id="retryPassword"
+          formControlName="retryPassword"
+          appCheckPass
+          [parametro]="this.registerForm.value.password"
+        />
+        <div
+          *ngIf="this.registerForm.get('retryPassword')?.errors?.['required'] && this.registerForm.get('retryPassword')?.touched"
+          class="form-text text-danger"
+        >
+          La contraseña es obligatoria.
+        </div>
+        <div
+          *ngIf="this.registerForm.get('retryPassword')?.errors?.['checkPass'] && this.registerForm.get('retryPassword')?.touched"
+          class="form-text text-danger"
+        >
+          Contraseñas deben coincidir
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <label for="maritalStatus" class="form-label">Estado civil:</label>
+        <select
+          id="maritalStatus"
+          class="form-select"
+          formControlName="maritalStatus"
+          (change)="changeStatus($event)"
+          appCheckMaritalStatus
+        >
+          <option *ngFor="let status of maritalStatusOptions">
+            {{ status }}
+          </option>
+        </select>
+      </div>
       <div
-        class="form-check-inline"
-        *ngFor="let interest of interestsList"
+        *ngIf="this.registerForm.get('maritalStatus')?.errors?.['checkMaritalStatus'] && this.registerForm.get('maritalStatus')?.touched"
+        class="form-text text-danger"
       >
-        <label class="form-check-label">
+        Debe seleccionar un valor válido
+      </div>
+
+      <div class="offset-md-1 col-md-3">
+        <p>Genero:</p>
+        <div class="form-check form-check-inline">
           <input
             class="form-check-input"
-            type="checkbox"
-            value="{{ interest }}"
-            id="flexCheckDefault"
-            (change)="onCheckChange($event)"
+            type="radio"
+            name="inlineRadioOptions"
+            id="man"
+            value="man"
           />
-          {{ interest }}
-        </label>
+          <!--(change)="changeGender($event)"-->
+          <label class="form-check-label" for="inlineRadio1">Hombre</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input"
+            type="radio"
+            name="inlineRadioOptions"
+            id="woman"
+            value="woman"
+          />
+          <!--(change)="changeGender($event)"-->
+          <label class="form-check-label" for="inlineRadio2">Mujer</label>
+        </div>
       </div>
-      <!-- <div
+
+      <div class="col-md-4">
+        <p>Intereses:</p>
+        <div class="form-check-inline" *ngFor="let interest of interestsList">
+          <label class="form-check-label">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value="{{ interest }}"
+              id="flexCheckDefault"
+              (change)="onCheckChange($event)"
+            />
+            {{ interest }}
+          </label>
+        </div>
+        <!-- <div
         class="invalid-feedback"
         *ngIf="
           this.registerForm.controls['interestsGroup'].errors &&
@@ -177,21 +196,21 @@
       >
         At least one checkbox is required to check
       </div> -->
-    </div>
-
-    <div class="col-12">
-      <div class="form-check pt-4">
-        <input
-          class="form-check-input"
-          type="checkbox"
-          formControlName="acceptConditions"
-          id="acceptConditions"
-        />
-        <label class="form-check-label" for="acceptConditions">
-          Aceptar terminos y condiciones.
-        </label>
       </div>
-      <!-- <div
+
+      <div class="col-12">
+        <div class="form-check pt-4">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            formControlName="acceptConditions"
+            id="acceptConditions"
+          />
+          <label class="form-check-label" for="acceptConditions">
+            Aceptar terminos y condiciones.
+          </label>
+        </div>
+        <!-- <div
         class="form-text text-danger"
         *ngIf="
           this.registerForm.controls['acceptConditions'].errors &&
@@ -200,16 +219,17 @@
       >
         Es obligatorio marcar esta casilla
       </div> -->
-    </div>
-    <div class="col-12">
-      <button
-        type="submit"
-        class="btn btn-success"
-        type="submit"
-        [disabled]="registerForm.invalid"
-      >
-        Registrarse
-      </button>
-    </div>
-  </form>
-</div>
+      </div>
+      <div class="col-12">
+        <button
+          type="submit"
+          class="btn btn-success"
+          type="submit"
+          [disabled]="registerForm.invalid"
+        >
+          Registrarse
+        </button>
+      </div>
+    </form>
+  </div>
+</section>
