--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,22 +17,22 @@
         data-bs-target="#navbarNav"
         aria-controls="navbarNav"
         aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarNav" *ngIf="isLoggedIn;
+        else logout">
         <ul class="navbar-nav ms-lg-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
 
-          <li class="nav-item" *ngIf="showEventList">
+          <li class="nav-item">
             <a class="nav-link" href="/events">Events</a>
           </li>
 
-          <li class="nav-item" *ngIf="showProfile">
+          <li class="nav-item">
             <a class="nav-link" href="/profile">Profile</a>
           </li>
 
@@ -40,19 +40,25 @@
             <a class="nav-link" href="/register">Register</a>
           </li>
         </ul>
-        <div class="ms-4" *ngIf="isLoggedIn; else logout">
-          <a class="btn custom-btn custom-border-btn" (click)="getLogout()"
-            ><i class="fa-solid fa-right-from-bracket me-2"></i>Logout</a
-          >
+        <div class="ms-4">
+          <a class="btn custom-btn custom-border-btn" (click)="getLogout()"><i
+              class="fa-solid fa-right-from-bracket me-2"></i>Logout</a>
         </div>
-        <ng-template #logout>
-          <div class="ms-4">
-            <a href="/login" class="btn custom-btn custom-border-btn"
-              ><i class="fa-solid fa-user me-2"></i>Login</a
-            >
-          </div>
-        </ng-template>
       </div>
+      <ng-template #logout>
+        <ul class="navbar-nav ms-lg-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/register">Register</a>
+          </li>
+        </ul>
+        <div class="ms-4">
+          <a href="/login" class="btn custom-btn custom-border-btn"><i
+              class="fa-solid fa-user me-2"></i>Login</a>
+        </div>
+      </ng-template>
     </div>
   </nav>
   <!-- section -->
@@ -99,9 +105,7 @@
 
         <ul class="social-icon">
           <li class="social-icon-item">
-            <a class="social-icon-link"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
+            <a class="social-icon-link"><i class="fa-brands fa-instagram"></i></a>
           </li>
 
           <li class="social-icon-item">
@@ -109,9 +113,7 @@
           </li>
 
           <li class="social-icon-item">
-            <a class="social-icon-link"
-              ><i class="fa-brands fa-whatsapp"></i
-            ></a>
+            <a class="social-icon-link"><i class="fa-brands fa-whatsapp"></i></a>
           </li>
         </ul>
       </div>
@@ -126,7 +128,7 @@
             src="/assets/images/pod-talk-logo.png"
             class="logo-image img-fluid"
             alt="templatemo pod talk"
-          />
+            />
         </a>
       </div>
 
