--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -112,8 +112,8 @@
           </div>
 
           <div class="d-flex flex-column ms-auto">
-            <a class="btn btn-dark" (click)="deleteEvent(event)"><i
-                class="fa-solid fa-screwdriver-wrench"></i> Delete
+            <a class="btn btn-danger" (click)="deleteEvent(event)">
+              Delete
             </a>
           </div>
 
