--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -39,6 +39,15 @@
             alt=""
           />
         </div>
+        <!-- Button trigger modal -->
+        <button
+          type="button"
+          class="btn btn-primary"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModal"
+        >
+          Launch demo modal
+        </button>
       </div>
     </div>
   </div>
