--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,6 +1,6 @@
 <header
-  class="site-header d-flex flex-column justify-content-center
-  align-items-center">
+  class="site-header d-flex flex-column justify-content-center align-items-center"
+>
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-12 text-center">
@@ -18,15 +18,25 @@
           <h4 class="section-title">Event search</h4>
         </div>
       </div>
-      <div class="col-lg-8 col-12">
-        Filter by size:
+      <div class="col-lg-4 col-12">
+        Filter by location:
         <input
           class="form-control"
-          placeholder="Search event"
+          placeholder="Enter location"
           type="text"
-          [(ngModel)]="sizeFilter"
+          [(ngModel)]="locationFilter"
           (ngModelChange)="filter()"
-          />
+        />
+      </div>
+      <div class="col-lg-4 col-12">
+        Filter by type:
+        <input
+          class="form-control"
+          placeholder="Enter type"
+          type="text"
+          [(ngModel)]="typeFilter"
+          (ngModelChange)="filter()"
+        />
       </div>
       <div class="col-lg-4 col-12">
         Filter by price:
@@ -37,7 +47,7 @@
           max="30"
           [(ngModel)]="priceFilter"
           (ngModelChange)="filter()"
-          />
+        />
         {{ priceFilter }}
       </div>
     </div>
@@ -51,9 +61,10 @@
       <div
         class="col-lg-6 col-12 mb-4 mb-lg-0"
         *ngFor="
-        let event of eventosFiltrado
-        | paginate : { itemsPerPage: ipp, currentPage: cp }
-        ">
+          let event of eventosFiltrado
+            | paginate : { itemsPerPage: ipp, currentPage: cp }
+        "
+      >
         <div class="custom-block d-flex m-2">
           <div class="">
             <div class="custom-block-icon-wrap">
@@ -63,12 +74,13 @@
                   src="/assets/images/podcast/11683425_4790593.jpg"
                   class="custom-block-image img-fluid"
                   alt=""
-                  />
+                />
               </a>
             </div>
 
             <div class="mt-2">
-              <a class="btn custom-btn"><i class="fa-solid fa-cart-shopping"></i>
+              <a class="btn custom-btn"
+                ><i class="fa-solid fa-cart-shopping"></i>
                 Buy
               </a>
             </div>
@@ -81,7 +93,9 @@
                 {{ event.date }}
               </small>
 
-              <small>Code <span class="badge">{{ event.id + 1 }}</span></small>
+              <small
+                >Code <span class="badge">{{ event.id + 1 }}</span></small
+              >
             </div>
 
             <div class="profile-block">
@@ -92,13 +106,14 @@
                 <strong class="text-capitalize">{{ event.type }}</strong>
               </p>
               <p class="text-capitalize mb-0">
-                <i class="fa-solid fa-location-dot me-1"></i>{{ event.location
-                }}
+                <i class="fa-solid fa-location-dot me-1"></i
+                >{{ event.location }}
               </p>
             </div>
 
             <div
-              class="custom-block-bottom d-flex justify-content-between mt-3">
+              class="custom-block-bottom d-flex justify-content-between mt-3"
+            >
               <a>
                 <span>Price: {{ event.price }} &euro;</span>
               </a>
@@ -106,17 +121,21 @@
           </div>
 
           <div class="d-flex flex-column ms-auto">
-            <a class="btn btn-dark" (click)="modifyEvent(event)"><i
-                class="fa-solid fa-screwdriver-wrench"></i> Modify
+            <a
+              class="btn btn-dark mb-3"
+              data-bs-toggle="modal"
+              data-bs-target="#modifyModal"
+              (click)="modifyEvent(event)"
+              ><i class="fa-solid fa-screwdriver-wrench"></i> Modify
+            </a>
+            <a
+              class="btn btn-danger"
+              data-bs-toggle="modal"
+              data-bs-target="#deleteModal"
+              (click)="deleteEvent(event)"
+              ><i class="fa-solid fa-trash"></i> Delete
             </a>
           </div>
-
-          <div class="d-flex flex-column ms-auto">
-            <a class="btn btn-danger" (click)="deleteEvent(event)">
-              Delete
-            </a>
-          </div>
-
         </div>
       </div>
 
@@ -149,20 +168,125 @@
         <div class="col-lg-5 col-12 mx-auto">
           <div class="mt-5">
             <pagination-controls
-              (pageChange)="cp= $event"></pagination-controls>
+              (pageChange)="cp = $event"
+            ></pagination-controls>
           </div>
         </div>
       </div>
 
-      <app-modify
-        *ngIf="modified == true"
-        [id]="id"
-        [name]="name"
-        [type]="type"
-        [date]="date"
-        [location]="location"
-        [price]="price"
-        (messageEvent)="getEvent($event)"></app-modify>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="modifyModal"
+        tabindex="-1"
+        aria-labelledby="modifyModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modifyModalLabel">Modify event</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <app-modify
+                *ngIf="modified == true"
+                [id]="id"
+                [name]="name"
+                [type]="type"
+                [date]="date"
+                [location]="location"
+                [price]="price"
+                (messageEvent)="getEvent($event)"
+              ></app-modify>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal modified -->
+      <div
+        class="modal fade"
+        id="exampleModalToggle2"
+        aria-hidden="true"
+        aria-labelledby="exampleModalToggleLabel2"
+        tabindex="-1"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">
+                Message
+              </h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              Event with code {{ id + 1 }} modified successfully!
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal delete-->
+      <div
+        class="modal fade"
+        id="deleteModal"
+        tabindex="-1"
+        aria-labelledby="deleteModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="deleteModalLabel">Message</h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">Event has been deleted successfully!</div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
