--- a/src/app/components/modify/modify.component.html
+++ b/src/app/components/modify/modify.component.html
@@ -1,6 +1,4 @@
-
-<div class="login-form p-4 border rounded">
-  <h2 class="text-center display-6"><i class="fa-solid fa-user"></i></h2>
+<div class="login-form p-4">
   <form #formModify="ngForm">
     <div class="form-group p-3">
       <label for="username">Name</label>
@@ -15,14 +13,20 @@
         maxlength="50"
         required
         #nameControl="ngModel"
-        />
+      />
     </div>
-    <div *ngIf="nameControl.errors?.['required']&& nameControl.touched"
-      class="text-danger">Campo
-      obigatorio</div>
-    <div *ngIf="nameControl.errors?.['minlength']&& nameControl.touched"
-      class="text-danger">Maximo
-      50 caracteres </div>
+    <div
+      *ngIf="nameControl.errors?.['required']&& nameControl.touched"
+      class="text-danger"
+    >
+      Campo obigatorio
+    </div>
+    <div
+      *ngIf="nameControl.errors?.['minlength']&& nameControl.touched"
+      class="text-danger"
+    >
+      Maximo 50 caracteres
+    </div>
     <div class="form-group p-3">
       <label for="password">Type</label>
       <input
@@ -34,11 +38,14 @@
         [(ngModel)]="type"
         required
         #TypeControl="ngModel"
-        />
+      />
     </div>
-    <div *ngIf="TypeControl.errors?.['required']&& TypeControl.touched"
-      class="text-danger">Campo
-      obigatorio</div>
+    <div
+      *ngIf="TypeControl.errors?.['required']&& TypeControl.touched"
+      class="text-danger"
+    >
+      Campo obigatorio
+    </div>
     <div class="form-group p-3">
       <label for="password">Date</label>
       <input
@@ -50,12 +57,13 @@
         [(ngModel)]="date"
         appCheckDate
         #dateControl="ngModel"
-        />
+      />
     </div>
     <div
       *ngIf="dateControl.errors?.['CheckDateDirective']
       && dateControl.touched"
-      class="form-text text-danger">
+      class="form-text text-danger"
+    >
       Fecha maxima de un año desde hoy
     </div>
     <div class="form-group p-3">
@@ -69,11 +77,14 @@
         [(ngModel)]="location"
         required
         #locationControl="ngModel"
-        />
+      />
     </div>
-    <div *ngIf="locationControl.errors?.['required']&& locationControl.touched"
-      class="text-danger">Campo
-      obigatorio</div>
+    <div
+      *ngIf="locationControl.errors?.['required']&& locationControl.touched"
+      class="text-danger"
+    >
+      Campo obigatorio
+    </div>
     <div class="form-group p-3">
       <label for="password">Price</label>
       <input
@@ -85,14 +96,22 @@
         [(ngModel)]="price"
         required
         #priceControl="ngModel"
-        />
+      />
     </div>
-    <div *ngIf="priceControl.errors?.['required']&& priceControl.touched"
-      class="text-danger">Campo
-      obigatorio</div>
-    <button (click)="sendMessage()" [disabled]="formModify.invalid" class="btn
-      btn-primary d-block m-auto mt-3">
-      Modify
+    <div
+      *ngIf="priceControl.errors?.['required']&& priceControl.touched"
+      class="text-danger"
+    >
+      Campo obigatorio
+    </div>
+    <button
+      data-bs-target="#exampleModalToggle2"
+      data-bs-toggle="modal"
+      (click)="sendMessage()"
+      [disabled]="formModify.invalid"
+      class="btn btn-primary d-block m-auto mt-3"
+    >
+      Save changes
     </button>
   </form>
 </div>
