--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,6 +1,6 @@
 <header
-  class="site-header d-flex flex-column justify-content-center align-items-center"
->
+  class="site-header d-flex flex-column justify-content-center
+  align-items-center">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-12 text-center">
@@ -15,8 +15,7 @@
     <form
       class="row g-3 border rounded p-3"
       [formGroup]="registerForm"
-      (ngSubmit)="submit()"
-    >
+      (ngSubmit)="submit()">
       <div class="col-md-12">
         <h2 class="text-center display-6">
           <i class="fa-solid fa-user-plus"></i>
@@ -29,26 +28,23 @@
           class="form-control"
           id="username"
           formControlName="username"
-        />
+          />
         <div
           *ngIf="this.registerForm.get('username')?.errors?.['required'] &&
           this.registerForm.get('username')?.touched"
-          class="form-text text-danger"
-        >
+          class="form-text text-danger">
           El nombre de usuario es obligatorio.
         </div>
         <div
           *ngIf="this.registerForm.get('username')?.errors?.['minlength'] &&
           this.registerForm.get('username')?.touched"
-          class="form-text text-danger"
-        >
+          class="form-text text-danger">
           Minimo 6 caracteres.
         </div>
         <div
           *ngIf="this.registerForm.get('username')?.errors?.['pattern'] &&
           this.registerForm.get('username')?.touched"
-          class="form-text text-danger"
-        >
+          class="form-text text-danger">
           Solo letras.
         </div>
       </div>
@@ -60,19 +56,17 @@
           class="form-control"
           id="email"
           formControlName="email"
-        />
+          />
         <div
           *ngIf="this.registerForm.get('email')?.errors?.['required'] &&
           this.registerForm.get('email')?.touched"
-          class="form-text text-danger"
-        >
+          class="form-text text-danger">
           El email es obligatorio.
         </div>
         <div
           *ngIf="this.registerForm.get('email')?.errors?.['pattern'] &&
           this.registerForm.get('email')?.touched"
-          class="form-text text-danger"
-        >
+          class="form-text text-danger">
           El email no tiene el formato correcto
         </div>
       </div>
@@ -84,34 +78,29 @@
           class="form-control"
           id="password"
           formControlName="password"
-        />
+          />
         <div
           *ngIf="this.registerForm.get('password')?.errors?.['required'] &&
           this.registerForm.get('password')?.touched"
-          class="form-text text-danger"
-        >
+          class="form-text text-danger">
           La contraseña es obligatoria.
         </div>
         <div
           *ngIf="this.registerForm.get('password')?.errors?.['minlength'] &&
           this.registerForm.get('password')?.touched"
-          class="form-text text-danger"
-        >
+          class="form-text text-danger">
           Minimo 8 caracteres.
         </div>
         <div
           *ngIf="this.registerForm.get('password')?.errors?.['pattern'] &&
           this.registerForm.get('password')?.touched"
-          class="form-text text-danger"
-        >
+          class="form-text text-danger">
           La contraseña tiene que contener solo letras o numeros
         </div>
       </div>
 
       <div class="col-md-6">
-        <label for="retry-password" class="form-label"
-          >Repite contraseña:</label
-        >
+        <label for="retry-password" class="form-label">Repite contraseña:</label>
         <input
           type="password"
           class="form-control"
@@ -119,19 +108,17 @@
           formControlName="retryPassword"
           appCheckPass
           [parametro]="this.registerForm.value.password"
-        />
+          />
         <div
           *ngIf="this.registerForm.get('retryPassword')?.errors?.['required'] &&
           this.registerForm.get('retryPassword')?.touched"
-          class="form-text text-danger"
-        >
+          class="form-text text-danger">
           La contraseña es obligatoria.
         </div>
         <div
           *ngIf="this.registerForm.get('retryPassword')?.errors?.['checkPass']
           && this.registerForm.get('retryPassword')?.touched"
-          class="form-text text-danger"
-        >
+          class="form-text text-danger">
           Contraseñas deben coincidir
         </div>
       </div>
@@ -142,8 +129,7 @@
           id="maritalStatus"
           class="form-select"
           formControlName="maritalStatus"
-          appCheckMaritalStatus
-        >
+          appCheckMaritalStatus>
           <option *ngFor="let status of maritalStatusOptions">
             {{ status }}
           </option>
@@ -152,8 +138,7 @@
       <div
         *ngIf="this.registerForm.get('maritalStatus')?.errors?.['checkMaritalStatus']
         && this.registerForm.get('maritalStatus')?.touched"
-        class="form-text text-danger"
-      >
+        class="form-text text-danger">
         Debe seleccionar un valor válido
       </div>
 
@@ -167,7 +152,7 @@
               value="{{ gender }}"
               id="{{ gender }}"
               formControlName="gender"
-            />
+              />
             {{ gender }}
           </label>
         </div>
@@ -183,7 +168,7 @@
               value="{{ interest }}"
               id="flexCheckDefault"
               (change)="onCheckChange($event)"
-            />
+              />
             {{ interest }}
           </label>
         </div>
@@ -196,7 +181,7 @@
             type="checkbox"
             formControlName="acceptConditions"
             id="acceptConditions"
-          />
+            />
           <label class="form-check-label" for="acceptConditions">
             Aceptar terminos y condiciones.
           </label>
@@ -209,8 +194,7 @@
           type="submit"
           data-bs-toggle="modal"
           data-bs-target="#dataModal"
-          [disabled]="registerForm.invalid"
-        >
+          [disabled]="registerForm.invalid">
           Registrarse
         </button>
       </div>
@@ -221,18 +205,16 @@
       id="dataModal"
       tabindex="-1"
       aria-labelledby="dataModalLabel"
-      aria-hidden="true"
-    >
+      aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="dataModalLabel">Cser data</h1>
+            <h1 class="modal-title fs-5" id="dataModalLabel">User data</h1>
             <button
               type="button"
               class="btn-close"
               data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
+              aria-label="Close"></button>
           </div>
           <div class="modal-body fw-bold">
             <p>rRegistered successfully!</p>
@@ -251,8 +233,7 @@
             <button
               type="button"
               class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
+              data-bs-dismiss="modal">
               Close
             </button>
           </div>
